# double-pendulum

./: .gitignore  CMakeLists.txt  README.md  config.yaml  run.py
include/: DoublePendulum.hpp  Integrator.hpp  Simulation.hpp
scripts/: __init__.py  animation.py  datareader.py  exporter.py  plots.py  wrapper.py
source/: DoublePendulum.cpp  Integrator.cpp  Simulation.cpp  bindings.cpp
